--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <section class="Intro">
             <div class="learn" align="center">
-                <img src="/image/learning programing.jpg" alt="learn">
+                <img src="image/learning programing.jpg" alt="learn">
             </div>  
             <div class="code" align="center">             
                 <div>
@@ -65,17 +65,17 @@
             <nav class="social">
             <ul>
              <li id="1">   
-            <img src="/image/people.png" alt="learing students" height="50">
+            <img src="image/people.png" alt="learing students" height="50">
             <h2 >6000+ students</h2>
              </li>
              <br>
              <li id="2">
-            <img src="/image/dc0066dbc887f7c7f98e5e83f08c0c7b.png" alt="connections" height="50">
+            <img src="image/dc0066dbc887f7c7f98e5e83f08c0c7b.png" alt="connections" height="50">
             <h2 >Industry Connections</h2>
             </li>
             <br>
             <li id="3">
-            <img src="/image/help.png" alt="value" height="50">
+            <img src="image/help.png" alt="value" height="50">
             <h2 >2000+ active users</h2>
             </li>
             <br>
@@ -98,21 +98,21 @@
         <section class="journey">
             <h2 align="center"><i>->we are on a Misssion Join us in The Journey</i></h2>
             <div align="center">
-            <img id="myimg" src="/image/Black Red and White Formal LinkedIn Profile Picture adobe.png" alt="image" height="250"></div>
+            <img id="myimg" src="image/Black Red and White Formal LinkedIn Profile Picture adobe.png" alt="image" height="250"></div>
         </section>
         <section class="joinus">
             <h2 align="center"><i>Join us on Other platforms</i></h2>
             <ul>
             <li>
-            <img src="/image/youtube logo.webp" alt="youtube" height=50">
+            <img src="image/youtube logo.webp" alt="youtube" height=50">
             <h4>Imaginary Hub</h4>
             </li>
             <li>
-            <img src="/image/insta logo.png" alt="insta" height="40">
+            <img src="image/insta logo.png" alt="insta" height="40">
             <h4>instagram</h4>
             </li>
             <li>
-            <img src="/image/telegram logo.webp" alt="telegram" height="50">
+            <img src="image/telegram logo.webp" alt="telegram" height="50">
             <h4>telegram</h4>
             </li>
             </ul>
