--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <nav class="nav">
         <ul>
             <li>
-        <a href="/index.html">Home</a>
+        <a href="index.html">Home</a>
             </li>
             <li>
         <a href="/courses.html">Courses</a>
             </li>
             <li>
-        <a href="/signin.html">Sign in</a>
+        <a href="signin.html">Sign in</a>
         </li>
         </ul>
     </nav>
@@ -53,7 +53,7 @@
             </div>
             <br>
             <nav class="nav"><UL>
-                <a href="/signin.html">->Sign in</a>
+                <a href="signin.html">->Sign in</a>
             </ul></nav>
             </div>
             <br>
