--- a/signin.html
+++ b/signin.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>signin</title>
-    <link rel="stylesheet" href ="/css/style2.css">
+    <link rel="stylesheet" href ="css/style2.css">
 </head>
 <body>
     <div class="signup" align="center">
     <h2>Sign up to Imaginary Hub</h2>
-    <form action="/index.html">
+    <form action="index.html">
         <label>Enter your name</label><br>
         <input type="text" placeholder="Enter name"><br>
         <label>Enter Email</label><br>
