--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>colne</title>
-    <link rel="stylesheet" href ="/css/style.css">
+    <link rel="stylesheet" href ="css/style.css">
 </head>
 <body>
     <header class="header" style="border-bottom: 1px solid #4F4F4F;" >
@@ -13,13 +13,13 @@
         <img class="logo" src="image/My project-1.png" alt="Logo" style="max-width: 100%; height: auto;">
         <ul style="position: relative;">
             <li>
-        <a href="/index.html">Home</a>
+        <a href="index.html">Home</a>
             </li>
             <li>
-        <a href="/courses.html">Courses</a>
+        <a href="courses.html">Courses</a>
             </li>
             <li>
-        <a href="/signin.html">Sign in</a>
+        <a href="signin.html">Sign in</a>
         </li>
         </ul>
         </div>
@@ -29,7 +29,7 @@
     <br>
         <section class="Intro">
             <div class="learn" align="center">
-                <img src="/image/learning programing.jpg" alt="learn" class="program" style="max-width:100%;height:auto;">
+                <img src="image/learning programing.jpg" alt="learn" class="program" style="max-width:100%;height:auto;">
             </div>  
             <div class="code" align="center">             
                 <div>
@@ -51,7 +51,7 @@
             </div>
             <br>
             <nav class="nav1"><UL><li>
-                <a href="/signin.html">->Sign in</a>
+                <a href="signin.html">->Sign in</a>
             </ul></li></nav>
             </div>
             <br>
@@ -63,17 +63,17 @@
             <nav class="social" style="max-width:100%;height:auto;">
             <ul>
              <li id="1">   
-            <img src="/image/people.png" alt="learing students" height="50">
+            <img src="image/people.png" alt="learing students" height="50">
             <h2 >6000+ students</h2>
              </li>
              <br>
              <li id="2">
-            <img src="/image/dc0066dbc887f7c7f98e5e83f08c0c7b.png" alt="connections" height="50">
+            <img src="image/dc0066dbc887f7c7f98e5e83f08c0c7b.png" alt="connections" height="50">
             <h2 >Industry Connections</h2>
             </li>
             <br>
             <li id="3">
-            <img src="/image/help.png" alt="value" height="50">
+            <img src="image/help.png" alt="value" height="50">
             <h2 >2000+ active users</h2>
             </li>
             <br>
@@ -96,21 +96,21 @@
         <section class="journey">
             <h2 align="center"><i>->we are on a Misssion Join us in The Journey</i></h2>
             <div align="center">
-            <img id="myimg" src="/image/Black Red and White Formal LinkedIn Profile Picture adobe.png" alt="image" height="250"></div>
+            <img id="myimg" src="image/Black Red and White Formal LinkedIn Profile Picture adobe.png" alt="image" height="250"></div>
         </section>
         <section class="joinus" style="max-width:100%;height:auto;">
             <h2 align="center"><i>Join us on Other platforms</i></h2>
             <ul>
             <li>
-            <img src="/image/youtube logo.webp" alt="youtube" height=50">
+            <img src="image/youtube logo.webp" alt="youtube" height=50">
             <h4>Imaginary Hub</h4>
             </li>
             <li>
-            <img src="/image/insta logo.png" alt="insta" height="40">
+            <img src="image/insta logo.png" alt="insta" height="40">
             <h4>instagram</h4>
             </li>
             <li>
-            <img src="/image/telegram logo.webp" alt="telegram" height="50">
+            <img src="image/telegram logo.webp" alt="telegram" height="50">
             <h4>telegram</h4>
             </li>
             </ul>
