--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     <header class="header" style="border-bottom: 1px solid #4F4F4F;" >
         <div class="nav">
-        <img class="logo" src="image/My project-1.png" alt="Logo" style="max-width: 100%; height: auto;">
+        <img class="logo" src="image/My project-1.png" alt="Logo" style="max-width: 100%;height: auto;" align="center">
         <ul style="position: relative;">
             <li>
-        <a href="index.html">Home</a>
+        <a href="/index.html">Home</a>
             </li>
             <li>
-        <a href="courses.html">Courses</a>
+        <a href="/course.html">Courses</a>
             </li>
             <li>
-        <a href="signin.html">Sign in</a>
+        <a href="/signin.html">Sign in</a>
         </li>
         </ul>
         </div>
@@ -51,7 +51,7 @@
             </div>
             <br>
             <nav class="nav1"><UL><li>
-                <a href="signin.html">->Sign in</a>
+                <a href="/signin.html">->Sign in</a>
             </ul></li></nav>
             </div>
             <br>
@@ -63,18 +63,18 @@
             <nav class="social" style="max-width:100%;height:auto;">
             <ul>
              <li id="1">   
-            <img src="image/people.png" alt="learing students" height="50">
-            <h2 >6000+ students</h2>
+            <img src="image/people.png" alt="learing students" style="width: 30%;height: auto;">
+            <p>6000+ students</p>
              </li>
              <br>
              <li id="2">
-            <img src="image/dc0066dbc887f7c7f98e5e83f08c0c7b.png" alt="connections" height="50">
-            <h2 >Industry Connections</h2>
+            <img src="image/dc0066dbc887f7c7f98e5e83f08c0c7b.png" alt="connections" style="width: 30%;height: auto;">
+            <p>Industry Connections</p>
             </li>
             <br>
             <li id="3">
-            <img src="image/help.png" alt="value" height="50">
-            <h2 >2000+ active users</h2>
+            <img src="image/help.png" alt="value" style="width: 30%;height: auto;">
+            <p>2000+ active users</p>
             </li>
             <br>
             </ul>
@@ -103,15 +103,15 @@
             <ul>
             <li>
             <img src="image/youtube logo.webp" alt="youtube" height=50">
-            <h4>Imaginary Hub</h4>
+            <p><i>Imaginary Hub</i></p>
             </li>
             <li>
             <img src="image/insta logo.png" alt="insta" height="40">
-            <h4>instagram</h4>
+            <p><i>instagram</i></p>
             </li>
             <li>
             <img src="image/telegram logo.webp" alt="telegram" height="50">
-            <h4>telegram</h4>
+            <p><i>telegram</i></p>
             </li>
             </ul>
         </section>
