--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>colne</title>
-    <link rel="stylesheet" href ="/css/style.css">
+    <link rel="stylesheet" href ="css/style.css">
 </head>
 <body>
     <header class="header" style="border-bottom: 1px solid #4F4F4F;" >
@@ -29,7 +29,7 @@
     <br>
         <section class="Intro">
             <div class="learn" align="center">
-                <img src="/image/learning programing.jpg" alt="learn" class="program" style="max-width:100%;height:auto;">
+                <img src="image/learning programing.jpg" alt="learn" class="program" style="max-width:100%;height:auto;">
             </div>  
             <div class="code" align="center">             
                 <div>
@@ -63,17 +63,17 @@
             <nav class="social" style="max-width:100%;height:auto;">
             <ul>
              <li id="1">   
-            <img src="/image/people.png" alt="learing students" style="width: 30%;height: auto;">
+            <img src="image/people.png" alt="learing students" style="width: 30%;height: auto;">
             <p>6000+ students</p>
              </li>
              <br>
              <li id="2">
-            <img src="/image/dc0066dbc887f7c7f98e5e83f08c0c7b.png" alt="connections" style="width: 30%;height: auto;">
+            <img src="image/dc0066dbc887f7c7f98e5e83f08c0c7b.png" alt="connections" style="width: 30%;height: auto;">
             <p>Industry Connections</p>
             </li>
             <br>
             <li id="3">
-            <img src="/image/help.png" alt="value" style="width: 30%;height: auto;">
+            <img src="image/help.png" alt="value" style="width: 30%;height: auto;">
             <p>2000+ active users</p>
             </li>
             <br>
@@ -96,21 +96,21 @@
         <section class="journey">
             <h2 align="center"><i>->we are on a Misssion Join us in The Journey</i></h2>
             <div align="center">
-            <img id="myimg" src="/image/Black Red and White Formal LinkedIn Profile Picture adobe.png" alt="image" height="250"></div>
+            <img id="myimg" src="image/Black Red and White Formal LinkedIn Profile Picture adobe.png" alt="image" height="250"></div>
         </section>
         <section class="joinus" style="max-width:100%;height:auto;">
             <h2 align="center"><i>Join us on Other platforms</i></h2>
             <ul>
             <li>
-            <img src="/image/youtube logo.webp" alt="youtube" height=50">
+            <img src="image/youtube logo.webp" alt="youtube" height=50">
             <p><i>Imaginary Hub</i></p>
             </li>
             <li>
-            <img src="/image/insta logo.png" alt="insta" height="40">
+            <img src="image/insta logo.png" alt="insta" height="40">
             <p><i>instagram</i></p>
             </li>
             <li>
-            <img src="/image/telegram logo.webp" alt="telegram" height="50">
+            <img src="image/telegram logo.webp" alt="telegram" height="50">
             <p><i>telegram</i></p>
             </li>
             </ul>
