--- a/signin.html
+++ b/signin.html
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href ="css/style2.css">
 </head>
 <body>
+    <header class="header" style="border-bottom: 1px solid #4F4F4F;" >
+        <div class="nav" align="center">
+        <img class="logo" src="image/My project-1.png" alt="Logo" style="max-width: 100%;height: auto;" align="center">
+        </div>
+    </header>
     <div class="signup" align="center">
     <h2>Sign up to Imaginary Hub</h2>
-    <form action="index.html">
+    <form action="/index1.html">
         <label>Enter your name</label><br>
         <input type="text" placeholder="Enter name"><br>
         <label>Enter Email</label><br>
@@ -22,6 +27,7 @@
          <input type="submit" placeholder="signin">
 
     </form>
-    </div>
+    </div><br><br>
+    <footer><p align="center"><i>Copy Right 2023</i></p></footer><br><br>
 </body>
 </html>
