--- a/mycourse.html
+++ b/mycourse.html
@@ -32,7 +32,7 @@
             <br>
             <div>
                 <div class="course image" align="center">
-                    <img src="/image/course image.jpg" alt="Course image" style="max-width: 100%;height: auto;"">
+                    <img src="image/course image.jpg" alt="Course image" style="max-width: 100%;height: auto;"">
                 </div>
                 <h2 align="center" class="bell" >Bellman Ford Batch</h2>
                 <div align="center">
