--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <img class="logo" src="image/My project-1.png" alt="Logo" style="max-width: 100%;height: auto;" align="center">
         <ul style="position: relative;">
             <li>
-        <a href="/index.html">Home</a>
+        <a href="index.html">Home</a>
             </li>
             <li>
-        <a href="/course.html">Courses</a>
+        <a href="course.html">Courses</a>
             </li>
             <li>
-        <a href="/signin.html">Sign in</a>
+        <a href="signin.html">Sign in</a>
         </li>
         </ul>
         </div>
@@ -51,7 +51,7 @@
             </div>
             <br>
             <nav class="nav1"><UL><li>
-                <a href="/signin.html">->Sign in</a>
+                <a href="signin.html">->Sign in</a>
             </ul></li></nav>
             </div>
             <br>
