--- a/course.html
+++ b/course.html
@@ -18,7 +18,7 @@
     <br><br>
     <div class="signup" align="center">
     <h2>Sign up to Imaginary Hub</h2>
-    <form action="/index1.html">
+    <form action="index1.html">
         <label>Enter your name</label><br>
         <input type="text" placeholder="Enter name"><br>
         <label>Enter Email</label><br>
