--- a/mycourse.html
+++ b/mycourse.html
@@ -13,10 +13,10 @@
         <img class="logo" src="image/My project-1.png" alt="Logo" style="max-width: 100%;height: auto;" align="center">
         <ul style="position: relative;">
             <li>
-        <a href="/index1.html">Home</a>
+        <a href="index1.html">Home</a>
             </li>
             <li>
-        <a href="/index.html">Sign out</a>
+        <a href="index.html">Sign out</a>
         </li>
         </ul>
         </div>
@@ -40,7 +40,7 @@
                 </div>
                 <br>
                 <div align="center" class="button">
-                    <a href="/start.html"><span style="font-style: italic; color: black;">START!</span></a>
+                    <a href="start.html"><span style="font-style: italic; color: black;">START!</span></a>
                 </div>
             </div>
         </div>
