--- a/index1.html
+++ b/index1.html
@@ -29,7 +29,7 @@
     <br>
         <section class="Intro">
             <div class="learn" align="center">
-                <img src="image/learning programing.jpg" alt="learn" class="program" style="max-width:100%;height:auto;">
+                <video src="video/Intro Course.mp4" style="max-width:80%;height:auto;" controls autoplay>Intro</video>
             </div>  
             <div class="code" align="center">             
                 <div>
@@ -51,7 +51,7 @@
             </div>
             <br>
             <!-- <nav class="nav1"><UL><li>
-                <a href="signin.html">->Sign in</a>
+                <a href="/signin.html">->Sign in</a>
             </ul></li></nav> -->
             </div>
             <br>
