--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
     <br>
         <section class="Intro">
             <div class="learn" align="center">
-                <img src="image/learning programing.jpg" alt="learn" class="program" style="max-width:100%;height:auto;">
+                <img src="gif1/searching boy.gif" alt="learn" class="program" style="max-width:100%;height:auto;">
             </div>  
             <div class="code" align="center">             
                 <div>
                 <h1 class="learn">
-                    ->Want to learn coding?
+                    ->Want to learn
                 </h1>
             </div>
             <br>
             <div>
-                <h3>
-                    ->learn C++ || Java || Python || C
-                </h3>
+                <h1>
+                    <span class="auto-type" style="font-weight: bolder; color: #FFA500;"></span>
+                </h1>
             </div>
             <br>
             <div>
@@ -99,21 +99,24 @@
             <img id="myimg" src="image/Black Red and White Formal LinkedIn Profile Picture adobe.png" alt="image" height="250"></div>
         </section>
         <section class="joinus" style="max-width:100%;height:auto;">
-            <h2 align="center"><i>Join us on Other platforms</i></h2>
+            <div>
+            <h1 align="center"><i>Join us on</i></h1>
+            <h1 align="center" class="auto-type1" style="font-weight: bold;"><i></i></h1>
             <ul>
             <li>
-            <img src="image/youtube logo.webp" alt="youtube" height=50">
+            <img src="/image/youtube logo.webp" alt="youtube" height=50">
             <p><i>Imaginary Hub</i></p>
             </li>
             <li>
-            <img src="image/insta logo.png" alt="insta" height="40">
+            <img src="/image/insta logo.png" alt="insta" height="40">
             <p><i>instagram</i></p>
             </li>
             <li>
-            <img src="image/telegram logo.webp" alt="telegram" height="50">
+            <img src="/image/telegram logo.webp" alt="telegram" height="50">
             <p><i>telegram</i></p>
             </li>
-            </ul>
+        </ul>
+            </div>
         </section>
     <br>
     <br>
@@ -122,5 +125,20 @@
     </footer>
     <br>
     <br>
+    <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
+    <script>
+        var typed=new Typed(".auto-type",{
+            strings:["Coding?","JAVA?","C++?","C Language?","Python?","development?"],
+            typedSpeed: 50,
+            backSpeed: 50,
+            loop: true
+        })
+        var typed=new Typed(".auto-type1",{
+            strings:["#Youtube","#Instagram","#Telegram"],
+            typedSpeed: 100,
+            backSpeed: 100,
+            loop: true
+        })
+    </script>
 </body>
 </html>
