--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
         </section>
         <section class="joinus" style="max-width:100%;height:auto;">
             <div>
+                <div>
             <h1 align="center"><i>Join us on</i></h1>
-            <h1 align="center" class="auto-type1" style="font-weight: bold;"><i></i></h1>
+                    <h1 align="center" class="auto-type1" style="font-weight: bold;"><i></i></h1></div>
             <ul>
             <li>
             <img src="/image/youtube logo.webp" alt="youtube" height=50">
