--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
         </section>
         <section class="joinus" style="max-width:100%;height:auto;">
             <div>
-                <div>
             <h1 align="center"><i>Join us on</i></h1>
-                    <h1 align="center" class="auto-type1" style="font-weight: bold;"><i></i></h1></div>
+           <h1 align="center"><span class="auto-type1" style="font-weight: bolder;font-style: italic;"></span></h1>
             <ul>
             <li>
             <img src="/image/youtube logo.webp" alt="youtube" height=50">
@@ -136,8 +135,8 @@
         })
         var typed=new Typed(".auto-type1",{
             strings:["#Youtube","#Instagram","#Telegram"],
-            typedSpeed: 100,
-            backSpeed: 100,
+            typedSpeed: 50,
+            backSpeed: 50,
             loop: true
         })
     </script>
