--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@
            <h1 align="center"><span class="auto-type1" style="font-weight: bolder;font-style: italic;"></span></h1>
             <ul>
             <li>
-            <img src="/image/youtube logo.webp" alt="youtube" height=50">
+            <img src="image/youtube logo.webp" alt="youtube" height=50">
             <p><i>Imaginary Hub</i></p>
             </li>
             <li>
-            <img src="/image/insta logo.png" alt="insta" height="40">
+            <img src="image/insta logo.png" alt="insta" height="40">
             <p><i>instagram</i></p>
             </li>
             <li>
-            <img src="/image/telegram logo.webp" alt="telegram" height="50">
+            <img src="image/telegram logo.webp" alt="telegram" height="50">
             <p><i>telegram</i></p>
             </li>
         </ul>
