--- a/index1.html
+++ b/index1.html
@@ -4,25 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>colne</title>
-    <link rel="stylesheet" href ="css/style.css">
+    <title>Quantum Studio's</title>
+    <link rel="stylesheet" href ="css/style3.css">
 </head>
 <body>
-    <header class="header" style="border-bottom: 1px solid #4F4F4F;" >
+    <header class="header" >
         <div class="nav">
-        <img class="logo" src="image/My project-1.png" alt="Logo" style="max-width: 100%;height: auto;" align="center">
-        <ul style="position: relative;">
-            <li>
-        <a href="index.html">Home</a>
-            </li>
-            <li>
-        <a href="mycourse.html">My Courses</a>
-            </li>
-            <li>
-                <a href="index.html">Sign out</a>
-                </li>
-        </ul>
-        </div>
+            <a href="index.html">
+              <ul><h3>Imaginary Hub</h3></ul>
+            </a>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="mycourse.html">My Courses</a></li>
+              <li><a href="index.html">Sign out</a></li>
+            </ul>
+          </div>          
         <br>
     </header>
     <br>
@@ -50,36 +46,42 @@
                 </h3>
             </div>
             <br>
-            <!-- <nav class="nav1"><UL><li>
-                <a href="/signin.html">->Sign in</a>
-            </ul></li></nav> -->
             </div>
             <br>
         </section>
         <br>
         <section class="numbers">
-            <div height="50" width="25">
-            <div align="center"><h2>We teach coding in a simple way</h2></div><br>
-            <nav class="social" style="max-width:100%;height:auto;">
-            <ul>
-             <li id="1">   
-            <img src="image/people.png" alt="learing students" style="width: 30%;height: auto;">
-            <p>6000+ students</p>
-             </li>
-             <br>
-             <li id="2">
-            <img src="image/dc0066dbc887f7c7f98e5e83f08c0c7b.png" alt="connections" style="width: 30%;height: auto;">
-            <p>Industry Connections</p>
-            </li>
-            <br>
-            <li id="3">
-            <img src="image/help.png" alt="value" style="width: 30%;height: auto;">
-            <p>2000+ active users</p>
-            </li>
-            <br>
-            </ul>
-            </nav>
-            </div>
+            <div class="container">
+                <div align="center">
+                  <h2>We teach coding in a simple way</h2>
+                </div>
+                <br>
+                <nav class="social">
+                  <ul>
+                    <li id="1">
+                      <div class="item">
+                        <img src="image/people.png" alt="learning students">
+                        <p data-count="6000">0+</p>
+                        <i><b>Learning Students</b></i>
+                      </div>
+                    </li>
+                    <li id="2">
+                      <div class="item">
+                        <img src="image/dc0066dbc887f7c7f98e5e83f08c0c7b.png" alt="connections">
+                        <p data-count="100">0</p>
+                        <i><b>Industry Connections</b></i>
+                      </div>
+                    </li>
+                    <li id="3">
+                      <div class="item">
+                        <img src="image/help.png" alt="value">
+                        <p data-count="2000">0</p>
+                        <i><b>Active Users</b></i>
+                      </div>
+                    </li>
+                  </ul>
+                </nav>
+              </div>              
         </section>
         <br>
         <br>
@@ -98,25 +100,25 @@
             <div align="center">
             <img id="myimg" src="image/Black Red and White Formal LinkedIn Profile Picture adobe.png" alt="image" height="250"></div>
         </section>
-       <section class="joinus" style="max-width:100%;height:auto;">
+        <section class="joinus" style="max-width:100%;height:auto;">
             <div>
-            <h1 align="center"><i>Join us on</i></h1>
-            <h1 align="center" class="auto-type1" style="font-weight: bold;"><i></i></h1>
-            <ul>
-            <li>
-            <img src="/image/youtube logo.webp" alt="youtube" height=50">
-            <p><i>Imaginary Hub</i></p>
-            </li>
-            <li>
-            <img src="/image/insta logo.png" alt="insta" height="40">
-            <p><i>instagram</i></p>
-            </li>
-            <li>
-            <img src="/image/telegram logo.webp" alt="telegram" height="50">
-            <p><i>telegram</i></p>
-            </li>
-        </ul>
-            </div>
+                <h1 align="center"><i>Join us on</i></h1>
+                <h1 align="center"><span class="auto-type1" style="font-weight: bolder;font-style: italic;"></span></h1>
+                <ul>
+                <li>
+                <img src="image/youtube logo.webp" alt="youtube" height=50">
+                <p><i>Imaginary Hub</i></p>
+                </li>
+                <li>
+                <img src="image/insta logo.png" alt="insta" height="40">
+                <p><i>instagram</i></p>
+                </li>
+                <li>
+                <img src="image/telegram logo.webp" alt="telegram" height="50">
+                <p><i>telegram</i></p>
+                </li>
+            </ul>
+                </div>
         </section>
     <br>
     <br>
@@ -139,6 +141,51 @@
             backSpeed: 100,
             loop: true
         })
+        function startCounting() {
+    const counters = document.querySelectorAll('.item p');
+    const speed = 10000; // Adjust the speed of counting (lower value = faster)
+
+    const options = {
+      root: null,
+      rootMargin: '0px',
+      threshold: 0.5,
+    };
+
+    const handleIntersect = (entries, observer) => {
+      entries.forEach((entry) => {
+        if (entry.isIntersecting) {
+          const target = entry.target;
+          const countTo = parseInt(target.dataset.count, 10);
+
+          let currentCount = 0;
+          const increment = Math.ceil(countTo / (speed / 16));
+
+          const updateCount = () => {
+            currentCount += increment;
+
+            if (currentCount >= countTo) {
+              target.textContent = countTo.toLocaleString();
+            } else {
+              target.textContent = currentCount.toLocaleString();
+              requestAnimationFrame(updateCount);
+            }
+          };
+
+          updateCount();
+          observer.unobserve(target);
+        }
+      });
+    };
+
+    const observer = new IntersectionObserver(handleIntersect, options);
+
+    counters.forEach((counter) => {
+      observer.observe(counter);
+    });
+  }
+
+  // Start counting when the DOM content is loaded
+  document.addEventListener('DOMContentLoaded', startCounting);
     </script>
 </body>
 </html>
