--- a/course.html
+++ b/course.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
-    <h2 align="center"><i>Would You Like to sign in First??</i></h2>
     <header class="header" style="border-bottom: 1px solid #4F4F4F;" >
         <div class="nav" align="center">
         <img class="logo" src="image/My project-1.png" alt="Logo" style="max-width: 100%;height: auto;" align="center">
@@ -18,17 +17,17 @@
     <br><br>
     <div class="signup" align="center">
     <h2>Sign up to Imaginary Hub</h2>
-    <form action="index1.html">
+    <form action="/index1.html">
         <label>Enter your name</label><br>
         <input type="text" placeholder="Enter name"><br>
         <label>Enter Email</label><br>
         <input type="email" placeholder="Email"><br>
         <label>Password</label><br>
         <input type="password" placeholder="password"><br>
-        <label>Enter Number</label><br>
+        <label>Enter Mobile Number</label><br>
         <input type="number" placeholder="Number" size="10"><br><br>
          <input type="submit" placeholder="signin">
-
+            <br>
     </form>
     </div>
     <br>
