--- a/signin.html
+++ b/signin.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>signin</title>
-    <link rel="stylesheet" href ="css/style2.css">
+    <link rel="stylesheet" href ="/css/style2.css">
 </head>
 <body>
     <header class="header" style="border-bottom: 1px solid #4F4F4F;" >
@@ -15,17 +15,17 @@
     </header>
     <div class="signup" align="center">
     <h2>Sign up to Imaginary Hub</h2>
-    <form action="index1.html">
+    <form action="/index1.html">
         <label>Enter your name</label><br>
         <input type="text" placeholder="Enter name"><br>
         <label>Enter Email</label><br>
         <input type="email" placeholder="Email"><br>
         <label>Password</label><br>
         <input type="password" placeholder="password"><br>
-        <label>Enter Number</label><br>
+        <label>Enter Mobile Number</label><br>
         <input type="number" placeholder="Number" size="10"><br><br>
          <input type="submit" placeholder="signin">
-
+        <br>
     </form>
     </div><br><br>
     <footer><p align="center"><i>Copy Right 2023</i></p></footer><br><br>
