--- a/Privacy.html
+++ b/Privacy.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Privacy Policy</title>
-  <link rel="stylesheet" href ="/css/style4.css">
+  <link rel="stylesheet" href ="css/style4.css">
 </head>
 <body>
     <header class="header" >
         <div class="nav">
-            <a href="/index.html">
+            <a href="index.html">
               <ul><h3>Imaginary Hub</h3></ul>
             </a>
             <nav class="navbar">
@@ -20,9 +20,9 @@
               <div class="menu-overlay">
                 <div class="close-button">&times;</div>
                 <ul class="overlay-menu">
-                  <li><a href="/index.html" >Home</a></li><br>
-                  <li><a href="/course.html" >Courses</a></li><br>
-                  <li><a href="/signin.html" >Sign in</a></li><br>
+                  <li><a href="index.html" >Home</a></li><br>
+                  <li><a href="course.html" >Courses</a></li><br>
+                  <li><a href="signin.html" >Sign in</a></li><br>
                 </ul>
               </div>
             </nav>               
@@ -73,9 +73,9 @@
           <div class="section-title">Helpful Links</div>
           <div class="section-content">
             <ul>
-                <li><a href="/refund.html">> Refund & cancelation Policy</a></li>
-                <li><a href="/terms.html">> Terms of Service</a></li>
-                <li><a href="/Privacy.html">> Privacy Policy</a></li>
+                <li><a href="refund.html">> Refund & cancelation Policy</a></li>
+                <li><a href="terms.html">> Terms of Service</a></li>
+                <li><a href="Privacy.html">> Privacy Policy</a></li>
             </ul>
           </div>
         </div>
