--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <br>
         <section class="Intro">
             <div class="learn">
-                <img src="gif/searching boy.gif" alt="learn" class="program">
+                <img src="gif1/searching boy.gif" alt="learn" class="program">
                 <div class="content">
                   <h1>->Want to learn</h1>
                   <br>
