--- a/Privacy.html
+++ b/Privacy.html
@@ -5,6 +5,25 @@
   <title>Privacy Policy</title>
   <link rel="stylesheet" href ="css/style4.css">
 </head>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+    }
+
+    h1 {
+      text-align: center;
+    }
+
+    h2 {
+      margin-top: 30px;
+    }
+
+    ol {
+      margin-top: 15px;
+      margin-bottom: 15px;
+    }
+  </style>
 <body>
     <header class="header" >
         <div class="nav">
