--- a/index1.html
+++ b/index1.html
@@ -10,25 +10,24 @@
 <body>
    <header class="header" >
         <div class="nav">
-            <a href="index.html">
-              <ul><h3>Imaginary Hub</h3></ul>
-            </a>
-            <nav class="navbar">
-              <div class="hamburger-menu">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
-              </div>
-              <div class="menu-overlay">
-                <div class="close-button">&times;</div>
-                <ul class="overlay-menu">
-                  <li><a href="index.html" >Home</a></li><br>
-                  <li><a href="course.html" >Courses</a></li><br>
-                  <li><a href="signin.html" >Sign in</a></li><br>
-                </ul>
-              </div>
-            </nav>               
-          </div>          
+        <a href="/index.html">
+          <ul><h3>Imaginary Hub</h3></ul>
+        </a>
+        <nav class="navbar">
+          <div class="hamburger-menu">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
+          <div class="menu-overlay">
+            <div class="close-button">&times;</div>
+            <ul class="overlay-menu">
+              <li><a href="/index.html" >Home</a></li><br>
+              <li><a href="/mycourse.html" >Courses</a></li><br>
+            </ul>
+          </div>
+        </nav>               
+      </div>          
         <br>
     </header>
     <br>
