--- a/index1.html
+++ b/index1.html
@@ -22,8 +22,8 @@
           <div class="menu-overlay">
             <div class="close-button">&times;</div>
             <ul class="overlay-menu">
-              <li><a href="/index.html" >Home</a></li><br>
-              <li><a href="/mycourse.html" >Courses</a></li><br>
+              <li><a href="index.html" >Home</a></li><br>
+              <li><a href="mycourse.html" >My Courses</a></li><br>
             </ul>
           </div>
         </nav>               
