--- a/Privacy.html
+++ b/Privacy.html
@@ -45,7 +45,9 @@
                 </ul>
               </div>
             </nav>               
-          </div>          
+          </div>
+      <br>
+  </header>
   <h1>Privacy Policy</h1>
   <p>This Privacy Policy discloses the privacy practices for Imaginary Hub with regard to your use of the online platform
     www.imaginaryhub.com.</p>
@@ -129,7 +131,6 @@ hamburgerMenu.addEventListener('click', function () {
 closeButton.addEventListener('click', function () {
   menuOverlay.classList.remove('active');
 });
-
-    </script>
+  </script>
 </body>
 </html>
