--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
         <br>
         <section class="numbers">
-            <div class="container">
+            <div class="contain">
                 <div align="center">
                   <h2>We teach coding in a simple way</h2>
                 </div>
