--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="/css/style3.css" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/b52e2e4043.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href ="/css/style.css">
+    <link rel="stylesheet" href ="css/style.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-light.bg border-bottom" style="background-color: bisque;" >
@@ -20,12 +20,12 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Courses</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/index1.html">Quanta Course</a></li>
+              <li><a class="dropdown-item" href="index1.html">Quanta Course</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -38,10 +38,10 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/signin.html">Login</a>
+            <a class="nav-link active" aria-current="page" href="signin.html">Login</a>
           </li> 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/signup.html">Sign up</a>
+            <a class="nav-link active" aria-current="page" href="signup.html">Sign up</a>
           </li> 
         </ul>
       </div>
@@ -51,14 +51,14 @@
     <br>
         <section class="Intro">
             <div class="learn">
-                <img src="/gif/searching boy.gif" alt="learn" class="program">
+                <img src="gif/searching boy.gif" alt="learn" class="program">
                 <div class="content">
                   <h1>->Want to learn</h1>
                   <br>
                   <h2><span class="auto-type" style="font-weight: bolder; color: black;"></span></h2>
                   <br>
                   <h2>->we make Your learning Journey special</h2><br>
-                 <ul> <a href="/signin.html">->Sign in</a><br></ui>
+                 <ul> <a href="signin.html">->Sign in</a><br></ui>
                 </div>
               </div>              
             <br>
@@ -75,21 +75,21 @@
                   <ul>
                     <li id="1">
                       <div class="item">
-                        <img src="/image/people.png" alt="learning students">
+                        <img src="image/people.png" alt="learning students">
                         <p data-count="6000">0+</p>
                         <i><b>Learning Students</b></i>
                       </div>
                     </li>
                     <li id="2">
                       <div class="item">
-                        <img src="/image/dc0066dbc887f7c7f98e5e83f08c0c7b.png" alt="connections">
+                        <img src="image/dc0066dbc887f7c7f98e5e83f08c0c7b.png" alt="connections">
                         <p data-count="100">0</p>
                         <i><b>Industry Connections</b></i>
                       </div>
                     </li>
                     <li id="3">
                       <div class="item">
-                        <img src="/image/help.png" alt="value">
+                        <img src="image/help.png" alt="value">
                         <p data-count="2000">0</p>
                         <i><b>Active Users</b></i>
                       </div>
@@ -114,7 +114,7 @@
         <section class="journey">
             <h2 align="center"><i>->we are on a Misssion Join us in The Journey</i></h2>
             <div align="center">
-            <img id="myimg" src="/image/Black Red and White Formal LinkedIn Profile Picture adobe.png" alt="image" height="250"></div>
+            <img id="myimg" src="image/Black Red and White Formal LinkedIn Profile Picture adobe.png" alt="image" height="250"></div>
         </section>
         <section class="joinus" style="max-width:100%;height:auto; background-color: bisque;">
             <div align="center">
@@ -144,10 +144,10 @@
             <div class="col" align="center">
               <h5>Helpful Links</h5>
               <div >
-                <a href="/index1.html"><i class="fa-solid fa-chevron-right"></i>  Course</a><br>
-                <a href="/Privacy.html"><i class="fa-solid fa-chevron-right"></i>  Privacy Policy</a><br>
-                <a href="/refund.html"><i class="fa-solid fa-chevron-right"></i>  Refund & cancelation</a><br>
-                <a href="/terms.html"><i class="fa-solid fa-chevron-right"></i>  Terms and Conditions</a><br>
+                <a href="index1.html"><i class="fa-solid fa-chevron-right"></i>  Course</a><br>
+                <a href="Privacy.html"><i class="fa-solid fa-chevron-right"></i>  Privacy Policy</a><br>
+                <a href="refund.html"><i class="fa-solid fa-chevron-right"></i>  Refund & cancelation</a><br>
+                <a href="terms.html"><i class="fa-solid fa-chevron-right"></i>  Terms and Conditions</a><br>
               </div>
             </div>
             <div class="col" align="center">
