--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quantum Studio's</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="/css/style3.css" rel="stylesheet"/>
+  <link href="css/style3.css" rel="stylesheet"/>
   <script src="https://kit.fontawesome.com/b52e2e4043.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -18,12 +18,12 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Courses</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/index1.html">Quanta Course</a></li>
+              <li><a class="dropdown-item" href="index1.html">Quanta Course</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -36,10 +36,10 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/signin.html">Login</a>
+            <a class="nav-link active" aria-current="page" href="signin.html">Login</a>
           </li> 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/signup.html">Sign up</a>
+            <a class="nav-link active" aria-current="page" href="signup.html">Sign up</a>
           </li> 
         </ul>
       </div>
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="col-md-6 order-md-firs">
-            <br><video src="/video/Intro Course-1.mp4"  controls autoplay>Intro</video>
+            <br><video src="video/Intro Course-1.mp4"  controls autoplay>Intro</video>
         </div>
       </div>
     </div>
@@ -124,7 +124,7 @@
         <button type="button" class="btn btn-primary">Enroll Now  <i class="fa-solid fa-angles-right"></i>  </button> <br><br>
       </div>
       <div class="col">
-        <img src="/image/Overview.png" alt="Overview" class="Overview" style="max-width: 90%; height: auto;">
+        <img src="image/Overview.png" alt="Overview" class="Overview" style="max-width: 90%; height: auto;">
       </div>
     </div>
   </div>
@@ -176,13 +176,13 @@
   <br>
   <div class="roadmap">
   <div align="center">
-    <img src="/image/Roadmap.png" class="img-fluid" alt="roadmap" style="max-width: 50%; height: auto;">
-    <img src="/image/Roadmap 2.png" class="img-fluid" alt="roadmap" style="max-width: 50%; height: auto; position: relative;
+    <img src="image/Roadmap.png" class="img-fluid" alt="roadmap" style="max-width: 50%; height: auto;">
+    <img src="image/Roadmap 2.png" class="img-fluid" alt="roadmap" style="max-width: 50%; height: auto; position: relative;
     right: 2.27%;">
   </div>
   </div>
   <div align="center" class="taught" id="instructor">
-    <img id="myimg" src="/image/Black Red and White Formal LinkedIn Profile Picture adobe.png" alt="image" height="250">
+    <img id="myimg" src="image/Black Red and White Formal LinkedIn Profile Picture adobe.png" alt="image" height="250">
     <strong style="color: rgb(102, 116, 204); font-weight: bold; font-size: larger;" >Taught By</strong><br>
     <h3 style="font-weight:400;">Jabir Hussain</h3><br>
   </div>
@@ -307,9 +307,9 @@
     <div class="col" align="center">
       <h5>Helpful Links</h5>
       <div >
-        <a href="/course.html"><i class="fa-solid fa-chevron-right"></i>  Course</a><br>
-        <a href="/Privacy.html"><i class="fa-solid fa-chevron-right"></i>  Privacy Policy</a><br>
-        <a href="/refund.html"><i class="fa-solid fa-chevron-right"></i>  Refund & cancelation</a><br>
+        <a href="course.html"><i class="fa-solid fa-chevron-right"></i>  Course</a><br>
+        <a href="Privacy.html"><i class="fa-solid fa-chevron-right"></i>  Privacy Policy</a><br>
+        <a href="refund.html"><i class="fa-solid fa-chevron-right"></i>  Refund & cancelation</a><br>
         <a href="/terms.html"><i class="fa-solid fa-chevron-right"></i>  Terms and Conditions</a><br>
       </div>
     </div>
