--- a/index1.html
+++ b/index1.html
@@ -50,7 +50,7 @@
   <section>
     <div class="container text-center">
       <div class="row ">
-        <div class="col">
+        <div class="col-mid order-md-first">
           <div class="content">
             <h1>->Want to learn</h1>
             <br>
@@ -60,7 +60,7 @@
             <button type="button" class="btn btn-primary" href="/signin.html">Sign in  <i class="fa-solid fa-angles-right"></i>  </button>
           </div>
         </div>
-        <div class="col-md-6 order-md-firs">
+        <div class="col-md">
             <br><video src="video/Intro Course-1.mp4"  controls autoplay>Intro</video>
         </div>
       </div>
