--- a/course.html
+++ b/course.html
@@ -47,7 +47,7 @@
   <section>
     <div class="container text-center">
       <div class="row ">
-        <div class="col">
+        <div class="col-md order-md-first">
           <div class="content">
             <h1>->Want to learn</h1>
             <br>
@@ -57,7 +57,7 @@
             <button type="button" class="btn btn-primary" href="/course.html">Join now  <i class="fa-solid fa-angles-right"></i>  </button>
           </div>
         </div>
-        <div class="col-md-6 order-md-firs">
+        <div class="col-md">
             <br><video src="/video/Intro Course-1.mp4"  controls autoplay>Intro</video>
         </div>
       </div>
