--- a/signin.html
+++ b/signin.html
@@ -71,7 +71,7 @@
   
           <div class="card bg-glass">
             <div class="card-body px-4 py-5 px-md-5">
-              <form action="/Home( af signin).html">
+              <form action="Home( af signin).html">
                 <!-- 2 column grid layout with text inputs for the first and last names -->
                 <!-- Email input -->
                 <div class="form-outline mb-4">
