--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signin to Imaginary HUB</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="/css/style3.css" rel="stylesheet"/>
+    <link href="css/style3.css" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/b52e2e4043.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -71,7 +71,7 @@
   
           <div class="card bg-glass">
             <div class="card-body px-4 py-5 px-md-5">
-              <form action="/Home( af signin).html">
+              <form action="Home( af signin).html">
                 <!-- 2 column grid layout with text inputs for the first and last names -->
                 <div class="row">
                   <div class="col-md-6 mb-4">
